Text align fix, and > fix

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,253 +1,223 @@
 .header {
-    background-color: $background-header-pink;
+  background-color: $background-header-pink;
 
- 
-    
+  &__mobile {
+    display: flex;
 
-    &__mobile {
-        display: flex;
+    padding-top: 8px;
+    padding-bottom: 5px;
+  }
 
-        padding-top: 8px;
-        padding-bottom: 5px;
-    }
+  &__menu {
+    padding-top: 15px;
 
-    &__menu {
-       
+    width: 100%;
+    height: 100%;
 
-        padding-top: 15px;
+    background-color: $background-color-menu;
 
-        width: 100%;
-        height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
 
+    transform: translateX(100%);
 
-        background-color: $background-color-menu;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-        position: fixed;
-        top: 0;
-        left: 0;
+    z-index: 5;
+  }
 
-        transform: translateX(100%);
+  &__menu.is-open {
+    transform: translateX(0%);
+  }
 
-        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);;
-
-        z-index: 5;
-
-    }
-
-    &__menu.is-open {
-        transform: translateX(0%)
-    }
-
-    &__inner {
+  &__inner {
     display: flex;
     flex-direction: column;
     margin-left: auto;
     margin-right: auto;
     max-width: 320px;
-  
-    }
-
+  }
 }
 
 .menu-button {
+  margin-left: auto;
+
+  background: transparent;
+  border: none;
+
+  cursor: pointer;
+
+  &__close {
+    margin-bottom: 21px;
+    margin-right: 20px;
+    padding-left: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+
+    &:hover .menu-button__burger,
+    &:focus .menu-button__burger {
+      fill: $title-text-color;
+      stroke: $title-text-color;
+    }
+  }
+
+  &__burger {
+    fill: $primary-text-color;
+    stroke: $primary-text-color;
+
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+      fill: $title-text-color;
+      stroke: $title-text-color;
+    }
+  }
+
+  &__buy {
+    margin-bottom: 19px;
     margin-left: auto;
+    margin-right: auto;
 
-    background: transparent;
-    border: none;
-
-    cursor: pointer;
-
-    &__close {
-        margin-bottom: 21px;
-        padding-left: 5px;
-        padding-top: 5px;
-        padding-bottom: 5px;
-
-        &:hover .menu-button__burger, &:focus .menu-button__burger {
-            fill: $title-text-color;
-            stroke: $title-text-color;
-        }
-      
-    }
-
-    &__burger {
-        fill: $primary-text-color;
-        stroke: $primary-text-color;
-
-        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-        &:hover, &:focus {
-        fill: $title-text-color;
-        stroke: $title-text-color;
-        }
-        
-    }
-    
-   
-    &__buy {
-        margin-bottom: 19px;
-        margin-left: auto;
-        margin-right: auto;
-
-      align-items: center;
-        text-align: center;
-      width: 209px;
-      height: 44px;
-
-      font-size: 16px;
-      line-height: 1.31;
-      font-weight: 700;
-
-      color:$title-text-color;
-      background-color: $primary-text-color;
-      border-radius: 22px;
-
-      border: none;
-    }
-}
-
-.nav {
+    align-items: center;
     text-align: center;
-   
-  
-}
+    width: 209px;
+    height: 44px;
 
+    font-size: 16px;
+    line-height: 1.31;
+    font-weight: 700;
+
+    color: $title-text-color;
+    background-color: $primary-text-color;
+    border-radius: 22px;
+
+    border: none;
+  }
+}
+.menu-button__buy > span {
+  margin-left: 27px;
+}
 .nav__list {
-    display: block;
-    // margin-left: -20px;
-    // padding-left: 20px;
-    // margin-right: -20px;
-    // padding-right: 20px;
+  display: block;
+  // margin-left: -20px;
+  // padding-left: 20px;
+  // margin-right: -20px;
+  // padding-right: 20px;
 
-    
+  border-top: 1px solid $border-menu-color;
 
-    
-    border-top: 1px solid $border-menu-color;
-    
-
-    &:last-child {
-        border-bottom: 1px solid $border-menu-color;
-    }
+  &:last-child {
+    border-bottom: 1px solid $border-menu-color;
+  }
 }
-
 
 .nav__link {
-padding-top: 11px;
-    padding-bottom: 11px;
+  padding-top: 11px;
+  padding-bottom: 11px;
+  padding-left: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.29;
+  color: $primary-text-color;
 
-    font-weight: 700;
-        font-size: 14px;
-        line-height: 1.29;
-        color: $primary-text-color;
-   
+  display: block;
+  text-decoration: none;
 
-    display: block;
-    text-decoration: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  
-    &:hover, &:focus {
-        color: $title-text-color;
-    }
+  &:hover,
+  &:focus {
+    color: $title-text-color;
+  }
 
-    &--selection {
-        color: $title-text-color;
-    }
+  &--selection {
+    color: $title-text-color;
+  }
 }
 
 .hero {
-    padding-top: 20px;
-    height: 439px;
+  padding-top: 20px;
+  height: 439px;
 
-    background-color: $background-header-pink;
+  background-color: $background-header-pink;
 
-    overflow: hidden;
+  overflow: hidden;
 
-    &__container { 
-        margin-top: -20px;
-        padding-top: 131px;
-        position: relative;
+  &__container {
+    margin-top: -20px;
+    padding-top: 131px;
+    position: relative;
+  }
+
+  &__circle {
+    width: 346px;
+    height: 344px;
+
+    border-radius: 50%;
+
+    background-color: $secondary-title-color;
+
+    position: absolute;
+    top: 20px;
+    left: 11.25%;
+
+    overflow: visible;
+  }
+
+  &__image {
+    position: absolute;
+
+    top: 9px;
+    left: 81px;
+  }
+
+  &__space {
+    position: relative;
+    z-index: 2;
+  }
+
+  &__title {
+    margin-bottom: 20px;
+
+    font-family: $brand-font;
+    font-size: 26px;
+    font-weight: 400;
+    line-height: 1.15;
+    letter-spacing: 0.04em;
+
+    color: $primary-text-color;
+    text-transform: uppercase;
+
+    &--accent {
+      font-size: 48px;
+      line-height: 0.97;
+
+      color: $title-text-color;
     }
+  }
 
-    &__circle {
-        width: 346px;
-        height: 344px;
+  &__button {
+    padding-left: 21px;
+    padding-right: 21px;
+    padding-top: 9px;
+    padding-bottom: 9px;
 
-        border-radius: 50%;
+    font-size: 8px;
+    line-height: 1.25;
+    color: $primary-text-color;
 
-        background-color: $secondary-title-color;
-        
-        position: absolute;
-        top: 20px;
-        left: 11.25%;
+    background-color: $title-text-color;
+    border-radius: 20px;
+    border: none;
 
-        overflow: visible;
+    cursor: pointer;
+  }
 
-    }
-
-    &__image {
-        position: absolute;
-
-        top: 9px;
-        left: 81px;
-    }
-
-    &__space {
-
-        position: relative;
-        z-index: 2;
-    }
-
-    &__title {
-        margin-bottom: 20px;
-        
-
-        font-family: $brand-font;
-        font-size: 26px;
-        font-weight: 400;
-        line-height: 1.15;
-        letter-spacing: 0.04em;
-
-        color: $primary-text-color;
-        text-transform: uppercase;
-
-
-       
-
-        
-
-        &--accent {
-            font-size: 48px;
-            line-height: 0.97;
-
-            color: $title-text-color;
-        }
-    }
-
-    &__button {
-        padding-left: 21px;
-        padding-right: 21px;
-        padding-top: 9px;
-        padding-bottom: 9px;
-
-        font-size: 8px;
-        line-height: 1.25;
-        color: $primary-text-color;
-
-        background-color: $title-text-color;
-        border-radius: 20px;
-        border: none;
-
-        cursor: pointer;
-    }
-
-    &__button--secondly {
-        background-color: $primary-text-color;
-        color: $title-text-color
-    }
-
-      
-
-    
+  &__button--secondly {
+    background-color: $primary-text-color;
+    color: $title-text-color;
+  }
 }
